--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.4",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
